<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">Smart Flasher</string>
    <string name="ab_partition">A/B Partition</string>
    <string name="ab_message">You don\'t need it anymore as the recovery image is in-built with the A/B partition.</string>
    <string name="about">About</string>
    <string name="about_me">Smart Flasher - A simple app to make flashing recovery zips much easier!</string>
    <string name="acquiring">Acquiring update info</string>
    <string name="add_here">Add here!</string>
    <string name="allow_ads">Allow Ads</string>
    <string name="allow_ads_message">Thank you very much for supporting the developer by allowing Ads!\n\nHowever, please be noted that allowing Ads sometimes results weired behaviour. If you encounter any such issues, feel free to disable it.</string>
    <string name="already_exists">%s already exists!</string>
    <string name="backup">Backup</string>
    <string name="backup_message">Backing up %s of your device into</string>
    <string name="boot_img">Boot IMG</string>
    <string name="boot_partition">Boot partition</string>
    <string name="boot_partition_unknown">Failed to get Boot Partition identity</string>
    <string name="busybox_installer">BusyBox Installer</string>
    <string name="busybox_installer_summary">It is highly recommended to have a standalone BusyBox installation on your device to work some features of this app properly (e.g., \'unzip\' &amp; \'mke2fs\' binaries for flashing &amp; \'curl\' or \'wget\' binary for kernel OTA updates). As an attempt to help users on this issue, a simple app is made available, which can be used as a one-click BusyBox installation utility for arm, arm64 and x86 device. Click here to Get It!</string>
    <string name="cancel">Cancel</string>
    <string name="change_logs">Change-logs</string>
    <string name="change_logs_summary">View Change-logs</string>
    <string name="clear_all">Clear All</string>
    <string name="clear_all_abort_message">All the fields are empty! Aborting.</string>
    <string name="clear_all_summary">Everything you added to this page will be cleared!</string>
    <string name="credits">Credits</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="delete">Delete</string>
    <string name="disable_ads_message">Congrats! Ads will be disabled soon!\n\nHowever, please be noted that the revenue obtained from these Ads are really helpful for the developer to continue his android development projects more active. If it doesn\'t hurt you much, please consider allowing the Ads to support the development.</string>
    <string name="documentation">Documentation</string>
    <string name="donate_me">Donate to Me</string>
    <string name="donate_me_message">\nIf you like to appreciate my work, please consider donating to me as it is helpful to continue my projects more active, although it is not at all necessary.\n</string>
    <string name="donate_me_playstore">\nPlease note: I can accept donations either via PayPal, or through SmartPack Donation Package in PlayStore.\n</string>
    <string name="donate_me_summary">Want to appreciate my work with a Donation? Click here</string>
    <string name="donate_nope">Not Now</string>
    <string name="donations">Donations</string>
    <string name="donation_link">Donation Link</string>
    <string name="donations_summary">Donate to Developer</string>
    <string name="donations_unknown">Donation link is not provided by the developer yet!</string>
    <string name="download">Download</string>
    <string name="download_completed">%s is successfully downloaded. Do you want to flash it?</string>
    <string name="download_failed">It seems like the download is failed, or a corrupted file is downloaded!</string>
    <string name="download_link">Download Link</string>
    <string name="downloading">Downloading %s</string>
    <string name="executing">Executing</string>
    <string name="file_size_limit">Warning! You\'re selected a file of ~%s MB for flashing. Flashing bigger files, such as ROM\'s, using this app might be dangerous to your device.</string>
    <string name="flasher">Flasher</string>
    <string name="flashing">Flashing</string>
    <string name="flashing_failed">Flashing Failed</string>
    <string name="flashing_finished">Flashing Finished</string>
    <string name="flash_img_warning">\n\nWarning: Flashing a wrong \'img\' file likely brick your device. Please be careful.\n</string>
    <string name="flash">Flash</string>
    <string name="flasher_warning">\n\nWarning: This feature is still very new and under development. It may not have full compatibility with many flashable zip files. If you think that the flashing process failed in any case due to the above mentioned incompatibilities, please restart the app immediately before doing anything.\n\n***USE AT YOUR OWN RISK***\n</string>
    <string name="get_it">Get It</string>
    <string name="get_it_summary">Get latest Kernel</string>
    <string name="kernel">Current Version</string>
    <string name="kernel_information">Kernel Informations</string>
    <string name="kernel_latest">Latest Version</string>
    <string name="kernel_name">Kernel Name</string>
    <string name="kernel_version">Kernel Version</string>
    <string name="language">Language (%s)</string>
    <string name="language_default">Default</string>
    <string name="language_am">Amharic</string>
    <string name="language_fr">French</string>
    <string name="language_el">Greek</string>
    <string name="language_en">English</string>
    <string name="language_it">Italian</string>
    <string name="language_ko">Korean</string>
    <string name="language_pt">Portuguese</string>
    <string name="language_ru">Russian</string>
    <string name="language_ch">Chinese</string>
    <string name="licence">License</string>
    <string name="licence_message" translatable="false">Smart Flasher is a free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.\n\nSmart Flasher is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.\n\nYou should have received a copy of the GNU General Public License along with Smart Flasher. If not, visit http://www.gnu.org/licenses/.</string>
    <string name="more">More</string>
    <string name="name_empty">Name is empty!</string>
    <string name="no_internet">Please check your internet connection!</string>
    <string name="no_root">No Root</string>
    <string name="no_root_message"><b>Why this issue happened?</b>\n\nYour device is either not rooted, or the root permission is declined for Smart Flasher by you!\n\n\n<b>Why root permission needed?</b>\n\nIn order to flash a recovery zip file, or  backup a partition image, Smart Flasher need to reach some top-level system partitions, and is impossible without root!\n\n\n<b>How can I root my device?</b>\n\nA simple google search will help to find many guides to achieve root on your device. Please have a look at it!\n\n\n<b>Is rooting a device safe?</b>\n\nRooting poses some security risk, but it\'s generally safe to do!</string>
    <string name="nothing_found">Nothing found!</string>
    <string name="nothing_found_summary">Click here, or the backup button, to start a new back up/flashing processes. The backed-up partitions will be available at \'%s\'.</string>
    <string name="ok">OK</string>
    <string name="options">Options</string>
    <string name="other_options">Other Options</string>
    <string name="paypal_donation">PayPal</string>
    <string name="permission_denied_write_storage">Permission denied for writing to storage!</string>
    <string name="playstore">PlayStore</string>
    <string name="playstore_summary">Visit Smart Flasher page on PlayStore</string>
    <string name="press_back">Press back again to exit</string>
    <string name="purchase_app">Donation App</string>
    <string name="reboot">Reboot</string>
    <string name="reboot_bootloader">Reboot Bootloader</string>
    <string name="reboot_dialog">It is  highly recommended to reboot your device after flashing.</string>
    <string name="reboot_normal">Normal Reboot</string>
    <string name="reboot_options">Reboot Options</string>
    <string name="reboot_options_Summary">Turn Off or Reboot your device</string>
    <string name="reboot_recovery">Reboot Recovery</string>
    <string name="recovery_img">Recovery IMG</string>
    <string name="recovery_partition">Recovery partition</string>
    <string name="recovery_partition_unknown">Failed to get Recovery Partition identity</string>
    <string name="rebooting">Rebooting</string>
    <string name="remove">Remove</string>
    <string name="restore">Restore</string>
    <string name="save_log_message">Flasher Log file is exported as %s!</string>
    <string name="sha1">Secure Hash Algorithm</string>
    <string name="share">Share</string>
    <string name="share_app">Share App</string>
    <string name="share_app_summary">Share Smart Flasher with your friends</string>
    <string name="share_app_message">Get Smart Flasher %s from\nPlayStore: https://play.google.com/store/apps/details?id=com.smartpack.smartflasher\nGitHub: https://github.com/SmartPack/SmartFlasher/blob/master/release/com.smartpack.smartflasher.apk?raw=true</string>
    <string name="share_by">\'%s\' | error log shared by Smart Flasher!</string>
    <string name="share_channel_message">To configure this update channel, simply input \'%s\' on SmartFlasher -> Update Channel Url.\n\nGet Smart Flasher from\nPlayStore: https://play.google.com/store/apps/details?id=com.smartpack.smartflasher\nGitHub: https://github.com/SmartPack/SmartFlasher/blob/master/release/com.smartpack.smartflasher.apk?raw=true</string>
    <string name="share_log">In order to fix this issue, please consider sharing the log file created at \'%s\' with the developer of this app.\nDo you want to share it now?</string>
    <string name="share_log_message">Here is the contents of the log file\n\'%s\'\n\n</string>
    <string name="source_code">Source Code</string>
    <string name="source_code_summary">View source code at GitHub</string>
    <string name="support">Support</string>
    <string name="support_group">Support Group</string>
    <string name="support_summary">Visit support group</string>
    <string name="sure_message">Are you sure to flash %s?</string>
    <string name="sure_question">Are you sure?</string>
    <string name="turn_off">Turn Off Device</string>
    <string name="update_check">Check for update</string>
    <string name="update_check_failed">Failed to get latest version information!</string>
    <string name="update_check_message">Smart Flasher will check for a new version of %s once in a day!</string>
    <string name="update_check_summary">Check for a new versions of Smart Flasher</string>
    <string name="update_available">New update available!\nv</string>
    <string name="update_available_summary">%s\n\n**Important: Please download and manually update the app!**</string>
    <string name="update_channel">Update Channel Url</string>
    <string name="update_channel_create">Create Update Channel</string>
    <string name="update_channel_instructions"><b>Kernel Name</b>, <b>Kernel Version</b> &amp; <b>Download Link</b> are the mandatory fields to be filled before clicking the create button.\n\n<b>Change-logs</b> could be provided, either as a well formatted text, or as a link to an online page.\n\nSecure Hash Algorithm (<b>sha1</b>) is optional, but highly recommended to ensure the authenticity of the downloaded kernel.</string>
</resources>