<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/updatechannel_card"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:padding="16dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="?android:attr/colorAccent"
            android:gravity="end|center_vertical">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/back_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:layout_gravity="start"
                android:src="@drawable/ic_back"
                android:background="?android:attr/colorAccent"
                android:tint="@color/black"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:gravity="center_vertical"
                android:layout_gravity="start"
                android:textStyle="bold"
                android:text="@string/update_channel_create"
                android:textSize="18sp"
                android:padding="10dp"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/save_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:layout_gravity="end"
                android:src="@drawable/ic_save"
                android:background="?android:attr/colorAccent"
                android:tint="@color/black"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end|center_vertical">

            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:gravity="center_vertical"
                android:layout_gravity="start|center"
                android:src="@drawable/ic_info"
                android:background="@null"
                android:tint="?android:attr/colorAccent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginStart="50dp"
                android:padding="10dp"
                android:gravity="start"
                android:text="@string/update_channel_instructions"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="15sp" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_weight="0.5" >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="start"
                    android:layout_marginStart="25dp" >

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:gravity="start"
                        android:text="@string/kernel_name"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="18sp" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/kernel_name_hint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:cursorVisible="true"
                        android:gravity="center|start"
                        android:hint="@string/add_here"
                        android:textColor="?android:attr/colorAccent"
                        android:textColorHint="?android:attr/colorAccent"
                        android:inputType="textMultiLine|textImeMultiLine|textNoSuggestions"
                        android:layout_marginBottom="10dp"
                        android:textSize="15sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:gravity="start"
                        android:text="@string/download_link"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="18sp" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/download_link_hint"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:cursorVisible="true"
                        android:gravity="center|start"
                        android:hint="@string/add_here"
                        android:textColor="?android:attr/colorAccent"
                        android:textColorHint="?android:attr/colorAccent"
                        android:inputType="textMultiLine|textImeMultiLine|textNoSuggestions"
                        android:layout_marginBottom="10dp"
                        android:textSize="15sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:gravity="start"
                        android:text="@string/sha1"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="18sp" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/sha1_hint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:cursorVisible="true"
                        android:gravity="center|start"
                        android:hint="@string/add_here"
                        android:textColor="?android:attr/colorAccent"
                        android:textColorHint="?android:attr/colorAccent"
                        android:inputType="textMultiLine|textImeMultiLine|textNoSuggestions"
                        android:layout_marginBottom="10dp"
                        android:textSize="15sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:gravity="start"
                        android:text="@string/donation_link"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="18sp" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/donation_link_hint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:cursorVisible="true"
                        android:gravity="center|start"
                        android:hint="@string/add_here"
                        android:textColor="?android:attr/colorAccent"
                        android:textColorHint="?android:attr/colorAccent"
                        android:inputType="textMultiLine|textImeMultiLine|textNoSuggestions"
                        android:layout_marginBottom="10dp"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="25dp"
                    android:layout_gravity="end"
                    android:orientation="vertical" >

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:gravity="start"
                        android:text="@string/kernel_version"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="18sp" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/kernel_version_hint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:cursorVisible="true"
                        android:gravity="center|start"
                        android:hint="@string/add_here"
                        android:textColor="?android:attr/colorAccent"
                        android:textColorHint="?android:attr/colorAccent"
                        android:inputType="textMultiLine|textImeMultiLine|textNoSuggestions"
                        android:layout_marginBottom="10dp"
                        android:textSize="15sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:gravity="start"
                        android:text="@string/change_logs"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="18sp" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/changelog_hint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:cursorVisible="true"
                        android:gravity="center|start"
                        android:hint="@string/add_here"
                        android:textColor="?android:attr/colorAccent"
                        android:textColorHint="?android:attr/colorAccent"
                        android:inputType="textMultiLine|textImeMultiLine|textNoSuggestions"
                        android:layout_marginBottom="10dp"
                        android:textSize="15sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:gravity="start"
                        android:text="@string/support_group"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="18sp" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/support_hint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:cursorVisible="true"
                        android:gravity="center|start"
                        android:hint="@string/add_here"
                        android:textColor="?android:attr/colorAccent"
                        android:textColorHint="?android:attr/colorAccent"
                        android:inputType="textMultiLine|textImeMultiLine|textNoSuggestions"
                        android:layout_marginBottom="10dp"
                        android:textSize="15sp" />
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/clear_all"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_gravity="bottom|center"
        android:textStyle="bold"
        android:background="?android:attr/colorAccent"
        android:text="@string/clear_all"
        android:textColor="@color/black"
        android:textSize="18sp" />
</androidx.cardview.widget.CardView>